--- a/.github/workflows/build_twrp.yml
+++ b/.github/workflows/build_twrp.yml
@@ -8,16 +8,28 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    timeout-minutes: 180  # Увеличьте, если сборка долгая
+    timeout-minutes: 360  # Увеличено до 6 часов
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Полная история для repo sync
 
-      - name: Set up environment
+      - name: Set up build environment
         run: |
-          sudo apt update
-          sudo apt install -y repo git python3
+          sudo apt-get update -y
+          sudo apt-get install -y \
+            git-core gnupg flex bison build-essential zip \
+            zlib1g-dev gcc-multilib g++-multilib libc6-dev-i386 \
+            lib32ncurses5-dev x11proto-core-dev libx11-dev lib32z1-dev \
+            libgl1-mesa-dev libxml2-utils xsltproc unzip fontconfig \
+            python3 rsync curl ccache repo p7zip-full
+
+      - name: Configure Git
+        run: |
+          git config --global user.name "Edmond2007"
+          git config --global user.email "edmondseropyan6@gmail.com"
 
       - name: Make build.sh executable
         run: chmod +x build.sh
@@ -26,7 +38,14 @@ jobs:
         run: ./build.sh
 
       - name: Upload TWRP image
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: TWRP_angelica
           path: platform_manifest_twrp_omni/out/target/product/angelica/TWRP_*.zip
+          retention-days: 7
+
+      - name: Clean up (optional)
+        if: always()
+        run: |
+          rm -rf platform_manifest_twrp_omni/.repo
+          sudo apt-get autoremove -y
