--- a/.github/workflows/build_twrp.yml
+++ b/.github/workflows/build_twrp.yml
@@ -7,24 +7,26 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
-    timeout-minutes: 360  # Увеличено до 6 часов
+    runs-on: ubuntu-22.04  # Используем Ubuntu 22.04 вместо latest
+    timeout-minutes: 360
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0  # Полная история для repo sync
+          fetch-depth: 0
 
       - name: Set up build environment
         run: |
           sudo apt-get update -y
+          sudo dpkg --add-architecture i386
+          sudo apt-get update -y
           sudo apt-get install -y \
             git-core gnupg flex bison build-essential zip \
             zlib1g-dev gcc-multilib g++-multilib libc6-dev-i386 \
-            x11proto-core-dev libx11-dev lib32z1-dev \
-            libgl1-mesa-dev libxml2-utils xsltproc unzip fontconfig \
-            python3 rsync curl ccache repo p7zip-full
+            lib32ncurses5-dev lib32z1-dev x11proto-core-dev \
+            libx11-dev libgl1-mesa-dev libxml2-utils xsltproc \
+            unzip fontconfig python3 rsync curl ccache repo p7zip-full
 
       - name: Configure Git
         run: |
@@ -35,7 +37,11 @@ jobs:
         run: chmod +x build.sh
 
       - name: Run build script
-        run: ./build.sh
+        run: |
+          export USE_CCACHE=1
+          export CCACHE_EXEC=/usr/bin/ccache
+          ccache -M 50G
+          ./build.sh
 
       - name: Upload TWRP image
         uses: actions/upload-artifact@v4
@@ -44,8 +50,9 @@ jobs:
           path: platform_manifest_twrp_omni/out/target/product/angelica/TWRP_*.zip
           retention-days: 7
 
-      - name: Clean up (optional)
+      - name: Clean up
         if: always()
         run: |
           rm -rf platform_manifest_twrp_omni/.repo
+          ccache -C
           sudo apt-get autoremove -y
